--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img height="200px" src="images\arash.svg" alt="My-Avatar">
+      <img height="200px" src="images/arash.svg" alt="My-Avatar">
       <h2>Hello.</h2>
       <p>I'm a web designer / programmer based in Tehran, Iran. I have a passion for designing beautiful websites. I love video games and they are my favorite hobby.</p>
     </div>
